fix button and z-index

--- a/src/sass/components/_09-footer.scss
+++ b/src/sass/components/_09-footer.scss
@@ -225,6 +225,7 @@
   right:50px;
   border: 0;
   background-color: transparent;
+  z-index: 4;
 
 }
 
